added UK, updated l10n strings

--- a/config/locales/id.yml
+++ b/config/locales/id.yml
@@ -58,7 +58,7 @@ id:
   my notifications: "Atur Notifikasi"
   my connections: "Akun terkait"
   my devices: "Perangkat terkait"
-  language name: "Bahasa Inggris"
+  language name: "Bahasa Indonesia"
   sign up: "Daftar"
   have an account: "Sudah memiliki Akun?"
   no account: "Tidak memiliki Akun?"
