--- a/config/locales/mk.yml
+++ b/config/locales/mk.yml
@@ -66,6 +66,7 @@ mk:
   successful sign-out: "Одјавен!"
   invalid login: "Погрешно корисничко име или лозинка"
   invalid password: "Погрешна лозинка"
+  sign back in: "За твојата сигурност,  најавата истекува по две недели.  Најави се повторно."
   youversion: "YouVersion"
   username or email prompt: "Корисничко име (или Е-адреса)"
   password prompt: "Лозинка"
@@ -93,6 +94,7 @@ mk:
   search placeholder: "Барај..."
   search: "Барај"
   book: "Книга"
+  filter book: "Филтрирај книги.."
   try the beta: "Пробај ја бета верзијата"
   welcome to the beta: "Добредојде во новиот YouVersion.com!"
   selected: "Селектирано"
@@ -155,6 +157,7 @@ mk:
     see my likes: "Види ги сите мои допаѓања "
     successfully deleted: "Белешката е отстранета"
   ref:
+    loading secondary: "Вчитување референци за втората верзија..."
     clear verses: "Отселектирај ги селектираните стихови"
     choose book and chapter: "Избери книга + глава"
     choose version: "Избери верзија"
@@ -176,6 +179,8 @@ mk:
     select another chapter: "Избери друга глава"
     view in reader: "Погледни го %{reference} во читачот"
   users:
+    unverified heading: "Скоро готово!"
+    unverified message: "Изгледа се обидуваш да се логираш на сметка која не е креирана целосно.  Треба уште еден чекор: едноставно кликни на врската за конфирмација во маилот  за потврда кој го прими од YouVersion. Не можеш да го најдете? Провери во спам или\n<a href='%{resend_path}'>прати повторно мејл за потврда</a>."
     reset connection: "Грешка при конекцијата. Ве молиме отстранете и реконектирајте ја конекцијата."
     settings: "Уредувања"
     no connection friends: "Никој од твоите %{connection} пријатели не е на YouVersion."
@@ -194,6 +199,7 @@ mk:
     follow: "Следи"
     follow user: "Следи го/ја %{user}"
     unfollow: "Не следи"
+    unfollow user: "Не го следи %{user}"
     following title: "Луѓе кои ги следам"
     user does not follow you: "%{user} не те следи."
     recent activity: "Скорешни активности"
@@ -285,6 +291,7 @@ mk:
       questions text: "Прашања за политиката на приватност можат да се упатат на: %{mailto_link}"
     terms:
       title: "Услови за користење"
+      translation disclaimer: "Условите за користење се преведени само информативно, но сепак, LifeChurch.tv не дава никакви гаранции или застапувања во однос на точноста на преводот. Ако било кои разлики се најдатт помеѓу англиската и преведената верзија, англиската верзија е официјална."
       acceptance title: "Прифаќање на условите"
       acceptance text: "не преведувај"
       description title: "Опис на услугите"
@@ -382,8 +389,10 @@ mk:
     title: "Обележувачи"
     not found: "Обележувачите овозможуваат брз пристап до омилените пасуси или до последното поглавје што го читаш во некоја книга од Библијата. За да создадеш обележувач, избери стих во читачот на Библијата што го користиш и кликни на копчето \"Селектирано\" на врвот од читачот."
     other user not found: "%{username} се уште нема зачувано обележувачи."
+    creation form errors: "Следниве грешки го спречија создавањето обележувач:"
     successfully created: "Додаде обележувач"
     successfully deleted: "Обележувачот е отстранет"
+    successfully updated: "Обележувачот е ажуриран"
     labels placeholder: "Раздели ги етикетите со запирки."
     save: "Зачувај го обележувачот"
     confirm delete: "Да, сигурен сум."
@@ -490,6 +499,7 @@ mk:
     subscribe successful: "Успешно се приклучи на овој план."
     which day in plan: " %{day} ден од вкупно %{total} денови"
     must start to complete: "Започни со овој план за да го зачуваш целото читање!"
+    invalid reference: "Библиските референци за ова читање не  постои во избраната верзија. Избори различни верзија. Ако продолжиш да ја добиваш оваа порака, ве молиме сподели ја со нашите\n<a href='%{support_url}'>support team</a> know about the issue."
   registration:
     with facebook: "Најави се со Facebook"
     benefits title: "Земи целосно искуство"
@@ -538,6 +548,7 @@ mk:
     city: "Град"
     state: "Држава"
     zip: "Поштенски код"
+    creation form errors: "Следниве грешки ја спречија донацијата:"
   download ad:
     title: "Симни ја бесплатната Библиска Апликација"
     line 1: "Стотици верзии на 100 +"
@@ -555,6 +566,8 @@ mk:
     partners text: "Без нашите дарежливи партнери за издавање на Библијата, YouVersion немаше да може да понуди толку многу Библии на нашата заедница ширум светот. Многумина прашувате како да им се заблагодарите на овие важни поддржувачи на мисијата на YouVersion. Можете да дознаете за нив, нивните служби, и начините на кои не поддржуваат на следните линкови."
     translation title: "Нашиот тим на преведувачи"
     learn more: "Дознај повеќе"
+    bible dot com title: "Што се случи со стариот сајт Bible.com?"
+    bible dot com copy: "Ако ги баратеChrist Unlimited Ministries од Бад и Бети Милер или стариот Bible.com сајт, посетете го нивниот нов сајт на <a href='http://www.bibleresources.org'>BibleResources.org</a>"
   press page:
     title: "Дел за медиуми"
     contact header: "Контакт информации за медиуми"
@@ -632,6 +645,25 @@ mk:
       highlights: "Означувања:"
       'on': "Вклучено"
       'off': "Исклучено"
+      extras: "Дополноително:"
+      translation notes: "Фусноти"
+      cross references: "Референци"
+  app errors:
+    404 explanation: "Пробај уште еднаш на <a href='%{reader_path}'>home page</a>. Се уште имате проблем? контактирајте го тогаш <a href='%{support_url}'>support team</a>."
+    404 message: "Страницата не може да се најде."
+    408 message: "Среверот не одговори навреме."
+    408 explanation: "Јавено ни е и во првата можност ќе го погледнеме проблемот.  Давидиме дали можеме да го решиме проблемот!"
+    try again: "Обиди се повторно"
   versions:
+    filter: "Филтрирај верзии..."
+    courtesy of: "%{abbreviation} обезбедено од %{publisher}"
     learn more: "Дознај повеќе"
+    index title: "Достапни верзии"
     publisher widget title: "Автор"
+    visit publisher: "Посети го сајтот на издавачот"
+    read title: "Прочитај ја оваа верзија"
+    other versions: "Други верзии од овој издавач"
+    number of versions field: "Вкупно верзии:"
+    number of languages field: "Вкупно јазици:"
+    language and count: "%{language_name} (%{language_count})"
+    public domain: "Јавен пристап"
