--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -504,7 +504,7 @@ zh-TW:
     with facebook: "透過 Facebook 帳號註冊"
     benefits title: "獲取完整的體驗"
     benefits blurb: "建立一個 YouVersion 帳號能讓您使用更多的功能如書籤和筆記。這些功能在任何您登入的設備上都能使用。有個帳號也使您輕易地和您的朋友分享聖經，請現在就花一兩分鐘來註冊吧!"
-    plan blurb: "看來您想開始一個讀經計劃。明智之舉！這些計劃可以幫助您使聖經成為您日常生活的一部份。請登入或者建立一個帳號然後開始衝刺！"
+    plan blurb: "看來您想開始一個讀經計劃。明智之舉！這些計劃可以幫助您使聖經成為您日常生活的一部份。請登入或者建立一個帳號就可以隨時開始了！"
     bookmark blurb: "看來您想使用一個書籤。太棒了！書籤幫助您紀錄您要背誦，分享，或者標記為喜愛的聖經經節。請登入或者建立一個帳號，然後就可以開始了！"
     friends blurb: "看來您想和朋友互動交流。好主意！您可以分享您所學習的，還有和朋友們彼此幫助遵循進度以達到閱讀目標。請登入或者建立一個帳號就可以開始了！"
     highlight blurb: "看來您想反白顯示這節經文。太好了！反白功能幫助您整理並記錄您喜愛的聖經經節。請登入或者建立一個帳號，然後就可以開始了！"
