--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,5 +1,26 @@
 ---
 en:
+  home:
+    hero heading:                               "A free Bible on your phone, tablet, and computer."
+    hero description:                           "YouVersion is a simple, ad-free Bible that brings God’s Word into your daily life."
+    hero learn more:                            "learn more below"
+    skip in future:                             "Skip this page in the future"
+    now skipped:                                "This page will now be skipped."
+    start reading:                              "Start reading"
+    features:
+      read heading:                             "Read the Bible."
+      read description:                         "Take your choice from <strong>hundreds of Bible versions and languages</strong>. Compare two versions side by side. You can even choose your font and display size. Make your online Bible experience just the way you like it."
+      study heading:                            "Study the Bible."
+      study description:                        "<strong>Highlight</strong> in your favorite color, <strong>bookmark</strong> your favorite Bible verses, and make notes about what you’re learning. Not only are you spending time in God’s Word, you’re building a history of your interaction with the Bible."
+      subscribe heading:                        "Subscribe to Bible Plans."
+      subscribe description:                    "Cover the whole Bible, focus on a topic, or read a devotional from a gifted teacher. Choose your plan and each day you’ll find a Bible selection waiting for you."
+      download heading:                         "Take the Bible with you."
+      download description:                     "<a href='/download'>Download</a> the Bible App for free on any mobile device. When you use the mobile app, your notes, bookmarks, highlights, plans, and more will be automatically synced across all of your devices."
+    get started:                                "Get started with your free account."
+    word with you:                              "God’s word is with you."
+    download action:                            "Download the Bible App"
+    download description:                       "Download the free YouVersion Bible App on your mobile device and you’ll have your Bible with you no matter where you go."
+    world installs:                             "Installs around the world"
   now:                                          "Now"
   celebrating 50MM:                             "Celebrating 50 Million App Installs!"
   link:                                         "Link"
@@ -507,6 +528,11 @@ en:
     must start to complete:                     "Start this plan to save completed readings!"
     invalid reference:                          "Sorry, one of the scripture references for this reading may not exist in the selected version. Try selecting a different version, above. If you continue to see this message, please let our <a href='%{support_url}'>support team</a> know about the issue."
   registration:
+    placeholder:
+      email:                                    "Enter your email address"
+      username:                                 "Enter your username"
+      password:                                 "Enter your password"
+    with email:                                 "Sign up using your email address"
     with facebook:                              "Sign up with Facebook"
     benefits title:                             "Get the Full Experience"
     benefits blurb:                             "Creating a YouVersion account gives you access to more features like bookmarks and notes. They'll show up on any device where you're signed in. An account also makes it easier to share the Bible with your friends, so take a minute or two and sign up!"
