Correct /download url.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -651,7 +651,7 @@ en:
         subscribe heading:                      "Subscribe to Bible Plans."
         subscribe description:                  "Cover the whole Bible, focus on a topic, or read a devotional from a gifted teacher. Choose your plan and each day you’ll find a Bible selection waiting for you."
         download heading:                       "Take the Bible with you."
-        download description:                   "<a href='/download'>Download</a> the Bible App for free on any mobile device. When you use the mobile app, your notes, bookmarks, highlights, plans, and more will be automatically synced across all of your devices."
+        download description:                   "<a href='http://youversion.com/download'>Download</a> the Bible App for free on any mobile device. When you use the mobile app, your notes, bookmarks, highlights, plans, and more will be automatically synced across all of your devices."
       get started:                              "Get started with your free account."
       word with you:                            "God’s word is with you."
       download action:                          "Download the Bible App"
