--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -699,4 +699,4 @@ en:
     language and count:                         "%{language_name} (%{language_count})"
     public domain:                              "Public Domain"
     loading:                                    "Loading More Versions..."
-    load error:                                 "Sorry, there was a problem loading more versions. Close this menu and repopen to try again."
+    load error:                                 "Sorry, there was a problem loading more versions. Close this menu and reopen to try again."
