--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -521,6 +521,7 @@ en:
     plan blurb:                                 "It looks like you want to start a Reading Plan. Smart! Plans can help you make the Bible a part of your daily life. Sign in or create an account below and get started!"
     bookmark blurb:                             "It looks like you want to use a bookmark. Great! Bookmarks help you keep track of verses you want to memorize, share, or mark as favorites. Sign in or create an account below, and get started!"
     friends blurb:                              "It looks like you want to interact with Friends. Good idea! You'll be able to share what you're learning and help each other stay on track with reading goals. Sign in or create an account below and get started!"
+    share blurb:                                "It looks like you want to share scripture. Great! You'll be able to share scripture via Facebook or Twitter. Sign in or create an account below and get started!"
     highlight blurb:                            "It looks like you want to highlight scripture. Great! Highlights help you organize and keep track of your favorite verses. Sign in or create an account below and get started!"
     note blurb:                                 "It looks like you want to take a note about scripture. Good thinking! Notes can help you remember and organize the truth you discover in God's Word. Sign in or create an account below and get started!"
   audio:
