--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -642,7 +642,7 @@ en:
     home:
       hero:
         heading:                                "A free Bible on your phone, tablet, and computer."
-        description:                            "YouVersion is a simple, ad-free Bible that brings God’s Word into your daily life."
+        description:                            "YouVersion is a simple, ad-free Bible that brings God's Word into your daily life."
         learn more:                             "learn more below"
         start reading:                          "Start reading"
         skip in future:                         "Skip this page in the future"
@@ -651,15 +651,15 @@ en:
         read heading:                           "Read the Bible."
         read description:                       "Take your choice from <strong>hundreds of Bible versions and languages</strong>. Compare two versions side by side. You can even choose your font and display size. Make your online Bible experience just the way you like it."
         study heading:                          "Study the Bible."
-        study description:                      "<strong>Highlight</strong> in your favorite color, <strong>bookmark</strong> your favorite Bible verses, and make notes about what you’re learning. Not only are you spending time in God’s Word, you’re building a history of your interaction with the Bible."
+        study description:                      "<strong>Highlight</strong> in your favorite color, <strong>bookmark</strong> your favorite Bible verses, and make notes about what you're learning. Not only are you spending time in God's Word, you're building a history of your interaction with the Bible."
         subscribe heading:                      "Subscribe to Bible Plans."
-        subscribe description:                  "Cover the whole Bible, focus on a topic, or read a devotional from a gifted teacher. Choose your plan and each day you’ll find a Bible selection waiting for you."
+        subscribe description:                  "Cover the whole Bible, focus on a topic, or read a devotional from a gifted teacher. Choose your plan and each day you'll find a Bible selection waiting for you."
         download heading:                       "Take the Bible with you."
         download description:                   "<a href='http://youversion.com/download'>Download</a> the Bible App for free on any mobile device. When you use the mobile app, your notes, bookmarks, highlights, plans, and more will be automatically synced across all of your devices."
       get started:                              "Get started with your free account."
-      word with you:                            "God’s Word is with you."
+      word with you:                            "God's Word is with you."
       download action:                          "Download the Bible App"
-      download description:                     "Download the free YouVersion Bible App on your mobile device and you’ll have your Bible with you no matter where you go."
+      download description:                     "Download the free YouVersion Bible App on your mobile device and you'll have your Bible with you no matter where you go."
       world installs:                           "Installs around the world"
   shared:
     menu_settings:
